--- a/dkms.conf
+++ b/dkms.conf
@@ -5,5 +5,5 @@ BUILT_MODULE_LOCATION=driver/kernel5.x
 DEST_MODULE_LOCATION=/extra
 PACKAGE_NAME=mxser
 PACKAGE_VERSION=5.1
-REMAKE_INITRD=no
+REMAKE_INITRD="yes"
 AUTOINSTALL="yes"
